--- a/TestRVer.html
+++ b/TestRVer.html
@@ -190,6 +190,11 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="3.8" data-path="BugTrack.html"><a href="BugTrack.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.8</b> Disagreement with a resolution on the bug tracker</a></li>
 <li class="chapter" data-level="3.9" data-path="BugTrack.html"><a href="BugTrack.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
 <li class="chapter" data-level="3.10" data-path="BugTrack.html"><a href="BugTrack.html#see-also-1"><i class="fa fa-check"></i><b>3.10</b> See also</a></li>
+<li class="chapter" data-level="3.11" data-path="BugTrack.html"><a href="BugTrack.html#how-to-contribute-to-issue-tracking"><i class="fa fa-check"></i><b>3.11</b> How to contribute to issue tracking</a></li>
+<li class="chapter" data-level="3.12" data-path="BugTrack.html"><a href="BugTrack.html#bugzilla-account"><i class="fa fa-check"></i><b>3.12</b> How to get a Bugzilla account</a>
+<ul>
+<li class="chapter" data-level="3.12.1" data-path="BugTrack.html"><a href="BugTrack.html#Bugzilla"><i class="fa fa-check"></i><b>3.12.1</b> Navigating Bugzilla</a></li>
+</ul></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>4</b> Reviewing Bugs</a>
 <ul>
