SaranjeetKaur published a site update

--- a/IssueTrack.html
+++ b/IssueTrack.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/Rlogo.svg" type="image/x-icon" />
-<link rel="prev" href="BugTrack.html"/>
+<link rel="prev" href="ReportingBugs.html"/>
 <link rel="next" href="ReviewBugs.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -174,22 +174,21 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="GetStart.html"><a href="GetStart.html#see-also"><i class="fa fa-check"></i><b>2.4</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="BugTrack.html"><a href="BugTrack.html"><i class="fa fa-check"></i><b>3</b> Bug Tracking</a>
+<li class="chapter" data-level="3" data-path="ReportingBugs.html"><a href="ReportingBugs.html"><i class="fa fa-check"></i><b>3</b> Reporting Bugs</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="BugTrack.html"><a href="BugTrack.html#what-is-a-bug-in-r"><i class="fa fa-check"></i><b>3.1</b> What is a bug in R?</a></li>
-<li class="chapter" data-level="3.2" data-path="BugTrack.html"><a href="BugTrack.html#what-condition-might-not-be-a-bug"><i class="fa fa-check"></i><b>3.2</b> What condition might not be a bug?</a></li>
-<li class="chapter" data-level="3.3" data-path="BugTrack.html"><a href="BugTrack.html#checking-if-a-bug-is-already-reported"><i class="fa fa-check"></i><b>3.3</b> Checking if a bug is already reported</a></li>
-<li class="chapter" data-level="3.4" data-path="BugTrack.html"><a href="BugTrack.html#levels-of-contributing-to-bug-what-do-you-do-when-you-find-a-bug"><i class="fa fa-check"></i><b>3.4</b> Levels of contributing to bug / What do you do when you find a bug?</a></li>
-<li class="chapter" data-level="3.5" data-path="BugTrack.html"><a href="BugTrack.html#what-are-some-places-where-you-may-find-a-bug"><i class="fa fa-check"></i><b>3.5</b> What are some places where you may find a bug?</a></li>
-<li class="chapter" data-level="3.6" data-path="BugTrack.html"><a href="BugTrack.html#ReportBug"><i class="fa fa-check"></i><b>3.6</b> How to report a bug?</a>
+<li class="chapter" data-level="3.1" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-is-a-bug-in-r"><i class="fa fa-check"></i><b>3.1</b> What is a bug in R?</a></li>
+<li class="chapter" data-level="3.2" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-condition-might-not-be-a-bug"><i class="fa fa-check"></i><b>3.2</b> What condition might not be a bug?</a></li>
+<li class="chapter" data-level="3.3" data-path="ReportingBugs.html"><a href="ReportingBugs.html#checking-if-a-bug-is-already-reported"><i class="fa fa-check"></i><b>3.3</b> Checking if a bug is already reported</a></li>
+<li class="chapter" data-level="3.4" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-are-some-places-where-you-may-find-a-bug"><i class="fa fa-check"></i><b>3.4</b> What are some places where you may find a bug?</a></li>
+<li class="chapter" data-level="3.5" data-path="ReportingBugs.html"><a href="ReportingBugs.html#ReportBug"><i class="fa fa-check"></i><b>3.5</b> How to report a bug?</a>
 <ul>
-<li class="chapter" data-level="3.6.1" data-path="BugTrack.html"><a href="BugTrack.html#RCorePkgBug"><i class="fa fa-check"></i><b>3.6.1</b> Bug in the R-Core supported packages, their documentations, and/ or in the R language</a></li>
-<li class="chapter" data-level="3.6.2" data-path="BugTrack.html"><a href="BugTrack.html#nonRCorePkgBug"><i class="fa fa-check"></i><b>3.6.2</b> Bug in the non R-Core supported packages and/or their documentations</a></li>
+<li class="chapter" data-level="3.5.1" data-path="ReportingBugs.html"><a href="ReportingBugs.html#RCorePkgBug"><i class="fa fa-check"></i><b>3.5.1</b> Bug in the R-Core supported packages, their documentations, and/ or in the R language</a></li>
+<li class="chapter" data-level="3.5.2" data-path="ReportingBugs.html"><a href="ReportingBugs.html#nonRCorePkgBug"><i class="fa fa-check"></i><b>3.5.2</b> Bug in the non R-Core supported packages and/or their documentations</a></li>
 </ul></li>
-<li class="chapter" data-level="3.7" data-path="BugTrack.html"><a href="BugTrack.html#good-practices-in-reporting-bugs-expectations-of-a-good-bug-report"><i class="fa fa-check"></i><b>3.7</b> Good practices in reporting bugs / Expectations of a good bug report</a></li>
-<li class="chapter" data-level="3.8" data-path="BugTrack.html"><a href="BugTrack.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.8</b> Disagreement with a resolution on the bug tracker</a></li>
-<li class="chapter" data-level="3.9" data-path="BugTrack.html"><a href="BugTrack.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
-<li class="chapter" data-level="3.10" data-path="BugTrack.html"><a href="BugTrack.html#see-also-1"><i class="fa fa-check"></i><b>3.10</b> See also</a></li>
+<li class="chapter" data-level="3.6" data-path="ReportingBugs.html"><a href="ReportingBugs.html#good-practices-in-reporting-bugs-expectations-of-a-good-bug-report"><i class="fa fa-check"></i><b>3.6</b> Good practices in reporting bugs / Expectations of a good bug report</a></li>
+<li class="chapter" data-level="3.7" data-path="ReportingBugs.html"><a href="ReportingBugs.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.7</b> Disagreement with a resolution on the bug tracker</a></li>
+<li class="chapter" data-level="3.8" data-path="ReportingBugs.html"><a href="ReportingBugs.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.8</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
+<li class="chapter" data-level="3.9" data-path="ReportingBugs.html"><a href="ReportingBugs.html#see-also-1"><i class="fa fa-check"></i><b>3.9</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="IssueTrack.html"><a href="IssueTrack.html"><i class="fa fa-check"></i><b>4</b> Issue Tracking</a>
 <ul>
@@ -371,7 +370,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
           </div>
         </div>
       </div>
-<a href="BugTrack.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="ReportingBugs.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="ReviewBugs.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
