--- a/introduction.html
+++ b/introduction.html
@@ -174,22 +174,21 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li class="chapter" data-level="2.4" data-path="GetStart.html"><a href="GetStart.html#see-also"><i class="fa fa-check"></i><b>2.4</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="3" data-path="BugTrack.html"><a href="BugTrack.html"><i class="fa fa-check"></i><b>3</b> Bug Tracking</a>
+<li class="chapter" data-level="3" data-path="ReportingBugs.html"><a href="ReportingBugs.html"><i class="fa fa-check"></i><b>3</b> Reporting Bugs</a>
 <ul>
-<li class="chapter" data-level="3.1" data-path="BugTrack.html"><a href="BugTrack.html#what-is-a-bug-in-r"><i class="fa fa-check"></i><b>3.1</b> What is a bug in R?</a></li>
-<li class="chapter" data-level="3.2" data-path="BugTrack.html"><a href="BugTrack.html#what-condition-might-not-be-a-bug"><i class="fa fa-check"></i><b>3.2</b> What condition might not be a bug?</a></li>
-<li class="chapter" data-level="3.3" data-path="BugTrack.html"><a href="BugTrack.html#checking-if-a-bug-is-already-reported"><i class="fa fa-check"></i><b>3.3</b> Checking if a bug is already reported</a></li>
-<li class="chapter" data-level="3.4" data-path="BugTrack.html"><a href="BugTrack.html#levels-of-contributing-to-bug-what-do-you-do-when-you-find-a-bug"><i class="fa fa-check"></i><b>3.4</b> Levels of contributing to bug / What do you do when you find a bug?</a></li>
-<li class="chapter" data-level="3.5" data-path="BugTrack.html"><a href="BugTrack.html#what-are-some-places-where-you-may-find-a-bug"><i class="fa fa-check"></i><b>3.5</b> What are some places where you may find a bug?</a></li>
-<li class="chapter" data-level="3.6" data-path="BugTrack.html"><a href="BugTrack.html#ReportBug"><i class="fa fa-check"></i><b>3.6</b> How to report a bug?</a>
+<li class="chapter" data-level="3.1" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-is-a-bug-in-r"><i class="fa fa-check"></i><b>3.1</b> What is a bug in R?</a></li>
+<li class="chapter" data-level="3.2" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-condition-might-not-be-a-bug"><i class="fa fa-check"></i><b>3.2</b> What condition might not be a bug?</a></li>
+<li class="chapter" data-level="3.3" data-path="ReportingBugs.html"><a href="ReportingBugs.html#checking-if-a-bug-is-already-reported"><i class="fa fa-check"></i><b>3.3</b> Checking if a bug is already reported</a></li>
+<li class="chapter" data-level="3.4" data-path="ReportingBugs.html"><a href="ReportingBugs.html#what-are-some-places-where-you-may-find-a-bug"><i class="fa fa-check"></i><b>3.4</b> What are some places where you may find a bug?</a></li>
+<li class="chapter" data-level="3.5" data-path="ReportingBugs.html"><a href="ReportingBugs.html#ReportBug"><i class="fa fa-check"></i><b>3.5</b> How to report a bug?</a>
 <ul>
-<li class="chapter" data-level="3.6.1" data-path="BugTrack.html"><a href="BugTrack.html#RCorePkgBug"><i class="fa fa-check"></i><b>3.6.1</b> Bug in the R-Core supported packages, their documentations, and/ or in the R language</a></li>
-<li class="chapter" data-level="3.6.2" data-path="BugTrack.html"><a href="BugTrack.html#nonRCorePkgBug"><i class="fa fa-check"></i><b>3.6.2</b> Bug in the non R-Core supported packages and/or their documentations</a></li>
+<li class="chapter" data-level="3.5.1" data-path="ReportingBugs.html"><a href="ReportingBugs.html#RCorePkgBug"><i class="fa fa-check"></i><b>3.5.1</b> Bug in the R-Core supported packages, their documentations, and/ or in the R language</a></li>
+<li class="chapter" data-level="3.5.2" data-path="ReportingBugs.html"><a href="ReportingBugs.html#nonRCorePkgBug"><i class="fa fa-check"></i><b>3.5.2</b> Bug in the non R-Core supported packages and/or their documentations</a></li>
 </ul></li>
-<li class="chapter" data-level="3.7" data-path="BugTrack.html"><a href="BugTrack.html#good-practices-in-reporting-bugs-expectations-of-a-good-bug-report"><i class="fa fa-check"></i><b>3.7</b> Good practices in reporting bugs / Expectations of a good bug report</a></li>
-<li class="chapter" data-level="3.8" data-path="BugTrack.html"><a href="BugTrack.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.8</b> Disagreement with a resolution on the bug tracker</a></li>
-<li class="chapter" data-level="3.9" data-path="BugTrack.html"><a href="BugTrack.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.9</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
-<li class="chapter" data-level="3.10" data-path="BugTrack.html"><a href="BugTrack.html#see-also-1"><i class="fa fa-check"></i><b>3.10</b> See also</a></li>
+<li class="chapter" data-level="3.6" data-path="ReportingBugs.html"><a href="ReportingBugs.html#good-practices-in-reporting-bugs-expectations-of-a-good-bug-report"><i class="fa fa-check"></i><b>3.6</b> Good practices in reporting bugs / Expectations of a good bug report</a></li>
+<li class="chapter" data-level="3.7" data-path="ReportingBugs.html"><a href="ReportingBugs.html#disagreement-with-a-resolution-on-the-bug-tracker"><i class="fa fa-check"></i><b>3.7</b> Disagreement with a resolution on the bug tracker</a></li>
+<li class="chapter" data-level="3.8" data-path="ReportingBugs.html"><a href="ReportingBugs.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>3.8</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
+<li class="chapter" data-level="3.9" data-path="ReportingBugs.html"><a href="ReportingBugs.html#see-also-1"><i class="fa fa-check"></i><b>3.9</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="4" data-path="IssueTrack.html"><a href="IssueTrack.html"><i class="fa fa-check"></i><b>4</b> Issue Tracking</a>
 <ul>
@@ -319,7 +318,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <h2><span class="header-section-number">1.1</span> Overview of different ways of contributing to the base R Project<a href="introduction.html#overview-of-different-ways-of-contributing-to-the-base-r-project" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>Contributions to base R are possible in a number of different ways. Some of them are listed below:</p>
 <ol style="list-style-type: decimal">
-<li>Contributing to bug fixing: Refer <a href="BugTrack.html#BugTrack">Bug Tracking</a> and <a href="ReviewBugs.html#ReviewBugs">Reviewing Bugs</a>.</li>
+<li>Contributing to bug fixing: Refer <a href="#BugTrack">Bug Tracking</a> and <a href="ReviewBugs.html#ReviewBugs">Reviewing Bugs</a>.</li>
 <li>Contributing to translations: Refer <a href="#">Translations</a>.</li>
 <li>Testing R before release: Refer <a href="TestRVer.html#TestRVer">Testing Pre-release R Versions</a>.</li>
 </ol>
@@ -335,7 +334,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </ol>
 <!-- TODO(Saranjeet): Add other operating systems as they get included in the guide-->
 <ol start="2" style="list-style-type: decimal">
-<li><p>The <a href="BugTrack.html#BugTrack">Bug Tracking</a> and the <a href="ReviewBugs.html#ReviewBugs">Reviewing Bugs</a> chapters discuss how to find bugs in R and how to review bug reports that are submitted to Bugzilla.</p></li>
+<li><p>The <a href="#BugTrack">Bug Tracking</a> and the <a href="ReviewBugs.html#ReviewBugs">Reviewing Bugs</a> chapters discuss how to find bugs in R and how to review bug reports that are submitted to Bugzilla.</p></li>
 <li><p>The <a href="FindSource.html#FindSource">Finding the Source</a> chapter provides an overview of the R codebase and helps with finding source code of base functions written in R and/or C.</p></li>
 <li><p>The <a href="FixBug.html#FixBug">Lifecycle of a Patch</a> chapter discusses how to create a patch to propose a bug fix.</p></li>
 <li><p>The <a href="Doc.html#Doc">Documenting R</a> chapter describes the format and style guide for help files in R, how to report and review issues in the existing documentation and how to propose changes.</p></li>
