SaranjeetKaur published a site update

--- a/message-translations.html
+++ b/message-translations.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/Rlogo.svg" type="image/x-icon" />
-<link rel="prev" href="FixBug.html"/>
+<link rel="prev" href="Doc.html"/>
 <link rel="next" href="TestRVer.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -198,54 +198,54 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.8" data-path="ReportingBugs.html"><a href="ReportingBugs.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>4.8</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
 <li class="chapter" data-level="4.9" data-path="ReportingBugs.html"><a href="ReportingBugs.html#see-also-1"><i class="fa fa-check"></i><b>4.9</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>5</b> Reviewing Bugs</a>
+<li class="chapter" data-level="5" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>5</b> Finding the Source</a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>5.1</b> How you can help to review bug reports?</a>
-<ul>
-<li class="chapter" data-level="5.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>5.1.1</b> Preparing to review bug reports</a></li>
+<li class="chapter" data-level="5.1" data-path="FindSource.html"><a href="FindSource.html#finding-r-source-code"><i class="fa fa-check"></i><b>5.1</b> Finding R source code</a></li>
+<li class="chapter" data-level="5.2" data-path="FindSource.html"><a href="FindSource.html#finding-c-source-code"><i class="fa fa-check"></i><b>5.2</b> Finding C source code</a></li>
+<li class="chapter" data-level="5.3" data-path="FindSource.html"><a href="FindSource.html#see-also-2"><i class="fa fa-check"></i><b>5.3</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="5.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>5.2</b> Classifying bug reports</a></li>
-<li class="chapter" data-level="5.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>5.3</b> How to find a bug report or an issue to review?</a></li>
-<li class="chapter" data-level="5.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>5.4</b> Example of a bug review submitted on Bugzilla</a></li>
-<li class="chapter" data-level="5.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>5.5</b> See also</a></li>
-</ul></li>
-<li class="chapter" data-level="6" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>6</b> Finding the Source</a>
+<li class="chapter" data-level="6" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>6</b> Reviewing Bugs</a>
 <ul>
-<li class="chapter" data-level="6.1" data-path="FindSource.html"><a href="FindSource.html#finding-r-source-code"><i class="fa fa-check"></i><b>6.1</b> Finding R source code</a></li>
-<li class="chapter" data-level="6.2" data-path="FindSource.html"><a href="FindSource.html#finding-c-source-code"><i class="fa fa-check"></i><b>6.2</b> Finding C source code</a></li>
-<li class="chapter" data-level="6.3" data-path="FindSource.html"><a href="FindSource.html#see-also-3"><i class="fa fa-check"></i><b>6.3</b> See also</a></li>
-</ul></li>
-<li class="chapter" data-level="7" data-path="Doc.html"><a href="Doc.html"><i class="fa fa-check"></i><b>7</b> Documenting R</a>
+<li class="chapter" data-level="6.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>6.1</b> How you can help to review bug reports?</a>
 <ul>
-<li class="chapter" data-level="7.1" data-path="Doc.html"><a href="Doc.html#guidelines-for-writing-r-help-files"><i class="fa fa-check"></i><b>7.1</b> Guidelines for writing R help files</a></li>
-<li class="chapter" data-level="7.2" data-path="Doc.html"><a href="Doc.html#r-manuals"><i class="fa fa-check"></i><b>7.2</b> R manuals</a></li>
-<li class="chapter" data-level="7.3" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>7.3</b> Helping with documentation</a></li>
-<li class="chapter" data-level="7.4" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>7.4</b> Proofreading</a></li>
-<li class="chapter" data-level="7.5" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>7.5</b> Helping with the Developer’s Guide</a></li>
-<li class="chapter" data-level="7.6" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>7.6</b> Reporting documentation bugs</a></li>
-<li class="chapter" data-level="7.7" data-path="Doc.html"><a href="Doc.html#see-also-4"><i class="fa fa-check"></i><b>7.7</b> See also</a></li>
+<li class="chapter" data-level="6.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>6.1.1</b> Preparing to review bug reports</a></li>
 </ul></li>
-<li class="chapter" data-level="8" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>8</b> Lifecycle of a Patch</a>
-<ul>
-<li class="chapter" data-level="8.1" data-path="FixBug.html"><a href="FixBug.html#introduction-1"><i class="fa fa-check"></i><b>8.1</b> Introduction</a></li>
-<li class="chapter" data-level="8.2" data-path="FixBug.html"><a href="FixBug.html#when-do-you-submit-a-patch"><i class="fa fa-check"></i><b>8.2</b> When do you submit a patch?</a></li>
-<li class="chapter" data-level="8.3" data-path="FixBug.html"><a href="FixBug.html#what-tools-are-required-to-submit-a-patch"><i class="fa fa-check"></i><b>8.3</b> What tools are required to submit a patch?</a></li>
-<li class="chapter" data-level="8.4" data-path="FixBug.html"><a href="FixBug.html#how-to-prepare-a-patch"><i class="fa fa-check"></i><b>8.4</b> How to prepare a patch?</a>
-<ul>
-<li class="chapter" data-level="8.4.1" data-path="FixBug.html"><a href="FixBug.html#using-a-git-mirror"><i class="fa fa-check"></i><b>8.4.1</b> Using a git mirror</a></li>
+<li class="chapter" data-level="6.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>6.2</b> Classifying bug reports</a></li>
+<li class="chapter" data-level="6.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>6.3</b> How to find a bug report or an issue to review?</a></li>
+<li class="chapter" data-level="6.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>6.4</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="6.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-3"><i class="fa fa-check"></i><b>6.5</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="8.5" data-path="FixBug.html"><a href="FixBug.html#GoodPatches"><i class="fa fa-check"></i><b>8.5</b> Making good patches</a></li>
-<li class="chapter" data-level="8.6" data-path="FixBug.html"><a href="FixBug.html#SubmitPatches"><i class="fa fa-check"></i><b>8.6</b> Submitting your patch for review</a></li>
-<li class="chapter" data-level="8.7" data-path="FixBug.html"><a href="FixBug.html#PatchesReview"><i class="fa fa-check"></i><b>8.7</b> Getting your patch reviewed</a>
+<li class="chapter" data-level="7" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>7</b> Lifecycle of a Patch</a>
 <ul>
-<li class="chapter" data-level="8.7.1" data-path="FixBug.html"><a href="FixBug.html#how-to-review-a-patch"><i class="fa fa-check"></i><b>8.7.1</b> How to review a patch?</a></li>
+<li class="chapter" data-level="7.1" data-path="FixBug.html"><a href="FixBug.html#introduction-1"><i class="fa fa-check"></i><b>7.1</b> Introduction</a></li>
+<li class="chapter" data-level="7.2" data-path="FixBug.html"><a href="FixBug.html#when-do-you-submit-a-patch"><i class="fa fa-check"></i><b>7.2</b> When do you submit a patch?</a></li>
+<li class="chapter" data-level="7.3" data-path="FixBug.html"><a href="FixBug.html#what-tools-are-required-to-submit-a-patch"><i class="fa fa-check"></i><b>7.3</b> What tools are required to submit a patch?</a></li>
+<li class="chapter" data-level="7.4" data-path="FixBug.html"><a href="FixBug.html#how-to-prepare-a-patch"><i class="fa fa-check"></i><b>7.4</b> How to prepare a patch?</a>
+<ul>
+<li class="chapter" data-level="7.4.1" data-path="FixBug.html"><a href="FixBug.html#using-a-git-mirror"><i class="fa fa-check"></i><b>7.4.1</b> Using a git mirror</a></li>
 </ul></li>
-<li class="chapter" data-level="8.8" data-path="FixBug.html"><a href="FixBug.html#leaving-a-patch-review-on-bugzilla"><i class="fa fa-check"></i><b>8.8</b> Leaving a patch review on Bugzilla</a></li>
-<li class="chapter" data-level="8.9" data-path="FixBug.html"><a href="FixBug.html#dismissing-review-from-another-core-developer"><i class="fa fa-check"></i><b>8.9</b> Dismissing review from another core developer</a></li>
-<li class="chapter" data-level="8.10" data-path="FixBug.html"><a href="FixBug.html#acceptance-or-rejection-of-your-patch"><i class="fa fa-check"></i><b>8.10</b> Acceptance or rejection of your patch</a></li>
-<li class="chapter" data-level="8.11" data-path="FixBug.html"><a href="FixBug.html#examples-of-patch-reports-on-bugzilla"><i class="fa fa-check"></i><b>8.11</b> Examples of patch reports on Bugzilla</a></li>
-<li class="chapter" data-level="8.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>8.12</b> Examples of reviewing a patch</a></li>
-<li class="chapter" data-level="8.13" data-path="FixBug.html"><a href="FixBug.html#see-also-5"><i class="fa fa-check"></i><b>8.13</b> See also</a></li>
+<li class="chapter" data-level="7.5" data-path="FixBug.html"><a href="FixBug.html#GoodPatches"><i class="fa fa-check"></i><b>7.5</b> Making good patches</a></li>
+<li class="chapter" data-level="7.6" data-path="FixBug.html"><a href="FixBug.html#SubmitPatches"><i class="fa fa-check"></i><b>7.6</b> Submitting your patch for review</a></li>
+<li class="chapter" data-level="7.7" data-path="FixBug.html"><a href="FixBug.html#PatchesReview"><i class="fa fa-check"></i><b>7.7</b> Getting your patch reviewed</a>
+<ul>
+<li class="chapter" data-level="7.7.1" data-path="FixBug.html"><a href="FixBug.html#how-to-review-a-patch"><i class="fa fa-check"></i><b>7.7.1</b> How to review a patch?</a></li>
+</ul></li>
+<li class="chapter" data-level="7.8" data-path="FixBug.html"><a href="FixBug.html#leaving-a-patch-review-on-bugzilla"><i class="fa fa-check"></i><b>7.8</b> Leaving a patch review on Bugzilla</a></li>
+<li class="chapter" data-level="7.9" data-path="FixBug.html"><a href="FixBug.html#dismissing-review-from-another-core-developer"><i class="fa fa-check"></i><b>7.9</b> Dismissing review from another core developer</a></li>
+<li class="chapter" data-level="7.10" data-path="FixBug.html"><a href="FixBug.html#acceptance-or-rejection-of-your-patch"><i class="fa fa-check"></i><b>7.10</b> Acceptance or rejection of your patch</a></li>
+<li class="chapter" data-level="7.11" data-path="FixBug.html"><a href="FixBug.html#examples-of-patch-reports-on-bugzilla"><i class="fa fa-check"></i><b>7.11</b> Examples of patch reports on Bugzilla</a></li>
+<li class="chapter" data-level="7.12" data-path="FixBug.html"><a href="FixBug.html#examples-of-reviewing-a-patch"><i class="fa fa-check"></i><b>7.12</b> Examples of reviewing a patch</a></li>
+<li class="chapter" data-level="7.13" data-path="FixBug.html"><a href="FixBug.html#see-also-4"><i class="fa fa-check"></i><b>7.13</b> See also</a></li>
+</ul></li>
+<li class="chapter" data-level="8" data-path="Doc.html"><a href="Doc.html"><i class="fa fa-check"></i><b>8</b> Documenting R</a>
+<ul>
+<li class="chapter" data-level="8.1" data-path="Doc.html"><a href="Doc.html#guidelines-for-writing-r-help-files"><i class="fa fa-check"></i><b>8.1</b> Guidelines for writing R help files</a></li>
+<li class="chapter" data-level="8.2" data-path="Doc.html"><a href="Doc.html#r-manuals"><i class="fa fa-check"></i><b>8.2</b> R manuals</a></li>
+<li class="chapter" data-level="8.3" data-path="Doc.html"><a href="Doc.html#helping-with-documentation"><i class="fa fa-check"></i><b>8.3</b> Helping with documentation</a></li>
+<li class="chapter" data-level="8.4" data-path="Doc.html"><a href="Doc.html#proofreading"><i class="fa fa-check"></i><b>8.4</b> Proofreading</a></li>
+<li class="chapter" data-level="8.5" data-path="Doc.html"><a href="Doc.html#helping-with-the-developers-guide"><i class="fa fa-check"></i><b>8.5</b> Helping with the Developer’s Guide</a></li>
+<li class="chapter" data-level="8.6" data-path="Doc.html"><a href="Doc.html#reporting-documentation-bugs"><i class="fa fa-check"></i><b>8.6</b> Reporting documentation bugs</a></li>
+<li class="chapter" data-level="8.7" data-path="Doc.html"><a href="Doc.html#see-also-5"><i class="fa fa-check"></i><b>8.7</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="9" data-path="message-translations.html"><a href="message-translations.html"><i class="fa fa-check"></i><b>9</b> Message Translations</a>
 <ul>
@@ -450,7 +450,7 @@ They are stored in the R sources at <code>./src/library/translations/inst</code>
           </div>
         </div>
       </div>
-<a href="FixBug.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="Doc.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="TestRVer.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
