--- a/FixBug.html
+++ b/FixBug.html
@@ -30,7 +30,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
   
   <link rel="shortcut icon" href="img/Rlogo.svg" type="image/x-icon" />
-<link rel="prev" href="ReviewBugs.html"/>
+<link rel="prev" href="FindSource.html"/>
 <link rel="next" href="Doc.html"/>
 <script src="libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
@@ -198,22 +198,22 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="4.8" data-path="ReportingBugs.html"><a href="ReportingBugs.html#examples-of-bug-reports-submitted-on-bugzilla-or-r-devel-mailing-list"><i class="fa fa-check"></i><b>4.8</b> Examples of Bug reports submitted on Bugzilla or R-devel mailing list</a></li>
 <li class="chapter" data-level="4.9" data-path="ReportingBugs.html"><a href="ReportingBugs.html#see-also-1"><i class="fa fa-check"></i><b>4.9</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="5" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>5</b> Finding the Source</a>
+<li class="chapter" data-level="5" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>5</b> Reviewing Bugs</a>
 <ul>
-<li class="chapter" data-level="5.1" data-path="FindSource.html"><a href="FindSource.html#finding-r-source-code"><i class="fa fa-check"></i><b>5.1</b> Finding R source code</a></li>
-<li class="chapter" data-level="5.2" data-path="FindSource.html"><a href="FindSource.html#finding-c-source-code"><i class="fa fa-check"></i><b>5.2</b> Finding C source code</a></li>
-<li class="chapter" data-level="5.3" data-path="FindSource.html"><a href="FindSource.html#see-also-2"><i class="fa fa-check"></i><b>5.3</b> See also</a></li>
+<li class="chapter" data-level="5.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>5.1</b> How you can help to review bug reports?</a>
+<ul>
+<li class="chapter" data-level="5.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>5.1.1</b> Preparing to review bug reports</a></li>
 </ul></li>
-<li class="chapter" data-level="6" data-path="ReviewBugs.html"><a href="ReviewBugs.html"><i class="fa fa-check"></i><b>6</b> Reviewing Bugs</a>
-<ul>
-<li class="chapter" data-level="6.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-you-can-help-to-review-bug-reports"><i class="fa fa-check"></i><b>6.1</b> How you can help to review bug reports?</a>
-<ul>
-<li class="chapter" data-level="6.1.1" data-path="ReviewBugs.html"><a href="ReviewBugs.html#preparing-to-review-bug-reports"><i class="fa fa-check"></i><b>6.1.1</b> Preparing to review bug reports</a></li>
+<li class="chapter" data-level="5.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>5.2</b> Classifying bug reports</a></li>
+<li class="chapter" data-level="5.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>5.3</b> How to find a bug report or an issue to review?</a></li>
+<li class="chapter" data-level="5.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>5.4</b> Example of a bug review submitted on Bugzilla</a></li>
+<li class="chapter" data-level="5.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-2"><i class="fa fa-check"></i><b>5.5</b> See also</a></li>
 </ul></li>
-<li class="chapter" data-level="6.2" data-path="ReviewBugs.html"><a href="ReviewBugs.html#classifying-bug-reports"><i class="fa fa-check"></i><b>6.2</b> Classifying bug reports</a></li>
-<li class="chapter" data-level="6.3" data-path="ReviewBugs.html"><a href="ReviewBugs.html#how-to-find-a-bug-report-or-an-issue-to-review"><i class="fa fa-check"></i><b>6.3</b> How to find a bug report or an issue to review?</a></li>
-<li class="chapter" data-level="6.4" data-path="ReviewBugs.html"><a href="ReviewBugs.html#example-of-a-bug-review-submitted-on-bugzilla"><i class="fa fa-check"></i><b>6.4</b> Example of a bug review submitted on Bugzilla</a></li>
-<li class="chapter" data-level="6.5" data-path="ReviewBugs.html"><a href="ReviewBugs.html#see-also-3"><i class="fa fa-check"></i><b>6.5</b> See also</a></li>
+<li class="chapter" data-level="6" data-path="FindSource.html"><a href="FindSource.html"><i class="fa fa-check"></i><b>6</b> Finding the Source</a>
+<ul>
+<li class="chapter" data-level="6.1" data-path="FindSource.html"><a href="FindSource.html#finding-r-source-code"><i class="fa fa-check"></i><b>6.1</b> Finding R source code</a></li>
+<li class="chapter" data-level="6.2" data-path="FindSource.html"><a href="FindSource.html#finding-c-source-code"><i class="fa fa-check"></i><b>6.2</b> Finding C source code</a></li>
+<li class="chapter" data-level="6.3" data-path="FindSource.html"><a href="FindSource.html#see-also-3"><i class="fa fa-check"></i><b>6.3</b> See also</a></li>
 </ul></li>
 <li class="chapter" data-level="7" data-path="FixBug.html"><a href="FixBug.html"><i class="fa fa-check"></i><b>7</b> Lifecycle of a Patch</a>
 <ul>
@@ -469,7 +469,7 @@ When the checks end you will need to explore the results and asses if the result
           </div>
         </div>
       </div>
-<a href="ReviewBugs.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
+<a href="FindSource.html" class="navigation navigation-prev " aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 <a href="Doc.html" class="navigation navigation-next " aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
